--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
