--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "react-native-wheel-color-picker": "^1.3.1"
+    "react-native-wheel-color-picker": "^1.3.1",
+    "@react-native-picker/picker": "2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
