--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-webview": "13.12.5",
     "react-native-wheel-color-picker": "^1.3.1",
     "@react-native-community/datetimepicker": "8.2.0",
-    "expo-screen-orientation": "~8.0.4"
+    "expo-screen-orientation": "~8.0.4",
+    "expo-navigation-bar": "~4.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
